# ossify

./: .cspell.yaml  .rustfmt.toml  .taplo.toml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  rust-toolchain.toml
.cspell/: project-words.txt
.cspell/rust/: crates.txt  cspell-ext.json  rust.txt  toolchain.txt
.github/workflows/: ci.yml  release.yml
src/: body.rs  credential.rs  error.rs  lib.rs  query_auth_option.rs  response.rs  utils.rs
src/credentials/: cache.rs  chain.rs  env.rs  mod.rs  rrsa.rs  static.rs
src/ops/: mod.rs
src/ops/bucket/: mod.rs
src/ops/bucket/access_monitor/: get_bucket_access_monitor.rs  mod.rs  put_bucket_access_monitor.rs
src/ops/bucket/access_point/: create_access_point.rs  delete_access_point.rs  delete_access_point_policy.rs  get_access_point.rs  get_access_point_policy.rs  list_access_points.rs  mod.rs  put_access_point_policy.rs
src/ops/bucket/acl/: get_bucket_acl.rs  mod.rs  put_bucket_acl.rs
src/ops/bucket/anti_ddos/: init_bucket_anti_ddos_info.rs  list_bucket_anti_ddos_info.rs  mod.rs  update_bucket_anti_ddos_info.rs
src/ops/bucket/archive_direct_read/: get_bucket_archive_direct_read.rs  mod.rs  put_bucket_archive_direct_read.rs
src/ops/bucket/base/: common.rs  delete_bucket.rs  get_bucket_info.rs  get_bucket_location.rs  get_bucket_stat.rs  list_objects_v1.rs  list_objects_v2.rs  mod.rs  put_bucket.rs
src/ops/bucket/cname/: create_cname_token.rs  delete_cname.rs  get_cname_token.rs  list_cname.rs  mod.rs  put_cname.rs
src/ops/bucket/cors/: delete_bucket_cors.rs  get_bucket_cors.rs  mod.rs  options_object.rs  put_bucket_cors.rs
src/ops/bucket/data_accelerator/: delete_bucket_data_accelerator.rs  get_bucket_data_accelerator.rs  mod.rs  put_bucket_data_accelerator.rs
src/ops/bucket/data_indexing/: close_meta_query.rs  do_meta_query.rs  get_meta_query_status.rs  mod.rs  open_meta_query.rs
src/ops/bucket/encryption/: delete_bucket_encryption.rs  get_bucket_encryption.rs  mod.rs  put_bucket_encryption.rs
src/ops/bucket/https_config/: get_bucket_https_config.rs  mod.rs  put_bucket_https_config.rs
src/ops/bucket/inventory/: delete_bucket_inventory.rs  get_bucket_inventory.rs  list_bucket_inventory.rs  mod.rs  put_bucket_inventory.rs
src/ops/bucket/lifecycle/: delete_bucket_lifecycle.rs  get_bucket_lifecycle.rs  mod.rs  put_bucket_lifecycle.rs
src/ops/common/: access_point.rs  acl.rs  anti_ddos.rs  encoding_type.rs  encryption.rs  inventory.rs  lifecycle.rs  live_channel.rs  mod.rs  object_fc_access_point.rs  object_type.rs  owner.rs  public_access_block.rs  qos.rs  redundancy_transition.rs  replication.rs  resource_pool.rs  storage_class.rs  tag.rs  vector.rs
src/ops/object/: mod.rs
src/ops/service/: delete_public_access_block.rs  describe_regions.rs  get_public_access_block.rs  get_user_anti_ddos_info.rs  init_user_anti_ddos_info.rs  list_buckets.rs  list_user_data_redundancy_transition.rs  mod.rs  put_public_access_block.rs  update_user_anti_ddos_info.rs
src/ops/vector_bucket/: mod.rs
src/ser/: flatten.rs  key.rs  mod.rs  pair.rs
(+167 files in other folders)
