[package]
name = "ossify"
version = "0.4.2"
authors = ["Honsun Zhu <honsun@linux.com>"]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/honsunrise/ossify"
documentation = "https://docs.rs/ossify"
readme = "README.md"
categories = ["web-programming", "api-bindings"]
keywords = ["oss", "alibaba-cloud", "storage", "oss-sdk", "object-storage"]
description = "A modern, easy-to-use, and reqwest-powered Rust SDK for Alibaba Cloud Object Storage Service (OSS)"

publish = true

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls"]
rustls-no-provider = ["reqwest/rustls-no-provider"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-no-alpn = ["reqwest/native-tls-no-alpn"]
native-tls-vendored-no-alpn = ["reqwest/native-tls-vendored-no-alpn"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.0"
crc32fast = "1.5.0"
futures = "0.3"
heck = "0.5"
hex = "0.4"
hmac = "0.13"
http = "1.0"
itoa = "1.0"
jiff = { version = "0.2", features = ["serde"] }
once_cell = "1.19"
percent-encoding = "2.3"
quick-xml = { version = "0.39", features = ["serialize"] }
regex = "1.0"
reqwest = { version = "0.13", default-features = false, features = [
  "stream",
  "json",
] }
ryu = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.18"
sha1 = "0.11"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1"
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
